# pomsets-with-predicate-transformers

./: .gitignore  .merlin  LICENSE  Makefile  README.md  _tags  demo.lit  dune-project  jctc16.lit
data/: Makefile
data/latex-template/: macros.sty  preamble.tex
data/tests/: basic.lit
data/tests/ISO/: 1-MP.lit  2-MP+rel+acq.lit  3-LB.lit  4-LB+deps.lit  5-LB+false-dep.lit
data/tests/MP/: MP+rel+acq.lit
data/tests/atomics/: mp-atomic.lit
data/tests/basic/: coproduct-exns.lit  lb.lit  par-comp.lit  rw.lit
data/tests/c20/: rs-example.lit
data/tests/discussion/: fences.lit  jctc1+Fsc.lit  oota-viktor-2.lit  upclosure.lit  upclosure2.lit  upclosure3.lit
data/tests/esop_problem/: RRE.lit  cse.lit  lb+ctrldat+ctrl-single.lit  lb+ctrldata+ctrl-double.lit  lb+ctrldata+po.lit  lb+datas.lit  lb.lit  mp.lit  sb.lit
data/tests/imm/: fadd-atomicity.lit  lb-falsedep+fsc.lit
data/tests/jctc/: jctc1.lit  jctc10.lit  jctc11.lit  jctc12.lit  jctc13.lit  jctc14.lit  jctc15.lit  jctc16.lit  jctc17.lit  jctc18.lit  jctc19.lit  (+13 more)
src/: AST.ml  AST.mli  ASTToPomsetPT.ml  ASTToPomsetPTSeq.ml  Debug.ml  Interp.ml  PPRelation.ml  Pomset.ml  PomsetPT.ml  PomsetPTSeq.ml  PomsetPreconditions.ml  Preliminaries.ml  Relation.ml  RunConfig.ml  Util.ml  concurrentMap.ml  dune  pomsets.ml  rc11.ml
src/latex/: LatexAST.ml  LatexCommon.ml  LatexPomset.ml  LatexPomsetPTSeq.ml  PrintLatexDoc.ml
src/parse/: Lex.mll  Parse.ml  Parser.mly  dune
src/test/: Formula_test.ml  JctcShort_test.ml  PomsetPT_test.ml  Preliminaries_test.ml  Relation_test.ml  test.ml
test/: PomsetPT_test.ml
(+178 files in other folders)
