(include_subdirs unqualified)

(executables
  (names pomsets test)
  (modes byte exe)
  (preprocess (pps ppx_deriving.show ppx_deriving.eq))
  (flags -w +a-4-42-44-48-50-58-32-60@8)
  (libraries 
    batteries
    domainslib
    fmt
    ocamlgraph
    ounit2
    )
  )

(rule
  (alias runtest)
  (action (run ./test.exe)))
